	PR rtl-optimization/37514 	* config/sh/sh.h (OPTIMIZATION_OPTIONS): Set 	flag_ira_share_spill_slots to 2 if it's already non-zero. 	(OVERRIDE_OPTIONS): Clear flag_ira_share_spill_slots if         flag_ira_share_spill_slots is 2. 	* gcc.target/sh/pr37514.c: New test.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@141752 138bc75d-0d04-0410-961f-82ee72b054a4